--- a/CategoryRect.mediawiki
+++ b/CategoryRect.mediawiki
@@ -14,13 +14,13 @@ This category contains functions for handling simple rectangles including overla
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Enumerations == -->
-<!-- #<<FullSearch(category:CategoryEnum CategoryRect -SGEnumerations)>> -->
+<!-- #<<FullSearchCached(category:CategoryEnum CategoryRect -SGEnumerations)>> -->
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryRect -SGStructures)>>
+<<FullSearchCached(category:CategoryStruct CategoryRect -SGStructures)>>
 
 == Functions ==
-<<FullSearch(category:CategoryRect -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryRect -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
