--- a/CategorySurface.mediawiki
+++ b/CategorySurface.mediawiki
@@ -14,13 +14,13 @@ This category contains functions for handling surface creation and blitting as w
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Enumerations == -->
-<!-- #<<FullSearch(category:CategoryEnum CategorySurface -SGEnumerations)>> -->
+<!-- #<<FullSearchCached(category:CategoryEnum CategorySurface -SGEnumerations)>> -->
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategorySurface -SGStructures)>>
+<<FullSearchCached(category:CategoryStruct CategorySurface -SGStructures)>>
 
 == Functions ==
-<<FullSearch(category:CategorySurface -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategorySurface -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
