--- a/CategoryJoystick.mediawiki
+++ b/CategoryJoystick.mediawiki
@@ -14,13 +14,13 @@ This category contains functions for handling inputs from joysticks.
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Enumerations == -->
-<!-- #<<FullSearch(category:CategoryEnum CategoryJoystick -SGEnumerations)>> -->
+<!-- #<<FullSearchCached(category:CategoryEnum CategoryJoystick -SGEnumerations)>> -->
 
 <!-- #== Structures == -->
-<!-- #<<FullSearch(category:CategoryStruct CategoryJoystick -SGStructures)>> -->
+<!-- #<<FullSearchCached(category:CategoryStruct CategoryJoystick -SGStructures)>> -->
 
 == Functions ==
-<<FullSearch(category:CategoryJoystick -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryJoystick -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
