--- a/CategoryAudio.mediawiki
+++ b/CategoryAudio.mediawiki
@@ -13,13 +13,13 @@
 This category contains functions for handling audio devices and audio input/output.
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryAudio -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum CategoryAudio -SGEnumerations)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryAudio -SGStructures)>>
+<<FullSearchCached(category:CategoryStruct CategoryAudio -SGStructures)>>
 
 == Functions ==
-<<FullSearch(category:CategoryAudio -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryAudio -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
