--- a/CategoryTimer.mediawiki
+++ b/CategoryTimer.mediawiki
@@ -14,14 +14,13 @@ This category contains functions for handling the SDL time management routines.
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Enumerations == -->
-<!-- #<<FullSearch(category:CategoryEnum CategoryTimer -SGEnumerations)>> -->
+<!-- #<<FullSearchCached(category:CategoryEnum CategoryTimer -SGEnumerations)>> -->
 
 <!-- #== Structures == -->
-<!-- #<<FullSearch(category:CategoryStruct CategoryTimer -SGStructures)>> -->
+<!-- #<<FullSearchCached(category:CategoryStruct CategoryTimer -SGStructures)>> -->
 
 == Functions ==
-
-<<FullSearch(category:CategoryTimer -CategoryEnum -CategoryStruc -SGFunctionst)>>
+<<FullSearchCached(category:CategoryTimer -CategoryEnum -CategoryStruc -SGFunctionst)>>
 
 ----
 CategoryCategory
