--- a/CategoryIO.mediawiki
+++ b/CategoryIO.mediawiki
@@ -13,13 +13,13 @@ This category contains functions for handling the general interface for SDL to r
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Enumerations == -->
-<!-- #<<FullSearch(category:CategoryEnum CategoryIO -SGEnumerations)>> -->
+<!-- #<<FullSearchCached(category:CategoryEnum CategoryIO -SGEnumerations)>> -->
 
 <!-- #== Structures == -->
-<!-- #<<FullSearch(category:CategoryStruct CategoryIO -SGStructures)>> -->
+<!-- #<<FullSearchCached(category:CategoryStruct CategoryIO -SGStructures)>> -->
 
 == Functions ==
-<<FullSearch(category:CategoryIO -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryIO -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
