--- a/CategoryPlatform.mediawiki
+++ b/CategoryPlatform.mediawiki
@@ -14,13 +14,13 @@ This category contains functions for handling information about the current plat
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Enumerations == -->
-<!-- #<<FullSearch(category:CategoryEnum CategoryPlatform -SGEnumerations)>> -->
+<!-- #<<FullSearchCached(category:CategoryEnum CategoryPlatform -SGEnumerations)>> -->
 
 <!-- #== Structures == -->
-<!-- #<<FullSearch(category:CategoryStruct CategoryPlatform -SGStructures)>> -->
+<!-- #<<FullSearchCached(category:CategoryStruct CategoryPlatform -SGStructures)>> -->
 
 == Functions ==
-<<FullSearch(category:CategoryPlatform -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryPlatform -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
