--- a/CategoryPower.mediawiki
+++ b/CategoryPower.mediawiki
@@ -14,13 +14,13 @@ This category contains functions for handling SDL power management routines.
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryPower -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum CategoryPower -SGEnumerations)>>
 
 <!-- #== Structures == -->
-<!-- #<<FullSearch(category:CategoryStruct CategoryPower -SGStructures)>> -->
+<!-- #<<FullSearchCached(category:CategoryStruct CategoryPower -SGStructures)>> -->
 
 == Functions ==
-<<FullSearch(category:CategoryPower -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryPower -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
