--- a/CategoryAPI.mediawiki
+++ b/CategoryAPI.mediawiki
@@ -8,19 +8,19 @@
 
 == Hints ==
 
-<<FullSearch(category:CategoryDefine -SGHints)>>
+<<FullSearchCached(category:CategoryDefine -SGHints)>>
 
 == Enumerations ==
 
-<<FullSearch(category:CategoryEnum -SDLEnumTemplate -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum -SDLEnumTemplate -SGEnumerations)>>
 
 == Structures ==
 
-<<FullSearch(category:CategoryStruct -SDLStructTemplate -SGStructures -SGEnumerations)>>
+<<FullSearchCached(category:CategoryStruct -SDLStructTemplate -SGStructures)>>
 
 == Functions ==
 
-<<FullSearch(category:CategoryAPI -SDLFunctionTemplate -SGFunctions)>>
+<<FullSearchCached(category:CategoryAPI -SDLFunctionTemplate -SGFunctions)>>
 
 ----
 CategoryCategory
