--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -45,10 +45,10 @@ To help you with this we have created a series of resources:
  ||[[SGTutorials|Tutorials]]||Adding an existing tutorial to the Tutorials page<br/>Creating a new tutorial within the wiki||
  ||[[SGFunctions|Function Pages]]||Editing Function pages<br/>Editing Macro pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
  ||[[SGStructures|Structure Pages]]||Editing Structure pages<br/>Editing Union pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
+ ||[[SGEnumerations|Enumeration Pages]]||Editing Enumeration pages<br/>Editing Hint pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
+<!-- # ||[[SGNewPages|New Pages]]||Creating new pages in the wiki|| -->
 
-: If you find something that is not addressed or is unclear in a style guide please post your questions using the ''Feedback'' form, the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
-
-: ''More guides will be added over time!''
+: If you find something that is not addressed or is unclear in a style guide please post your questions to the Documentation mailing list, on a Forum, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
 <span id="email"></span>
 === Email ===
