--- a/SGTutorials.mediawiki
+++ b/SGTutorials.mediawiki
@@ -44,7 +44,7 @@ For additional assistance with editing, saving, or wiki-appropriate markup see t
 == Formatting Your Entry ==
 
 === Basic Format ===
- 1. ''Action'': Create a linked title for your tutorial.  
+: ''Action 1'': Create a linked title for your tutorial.  
 : It should be located under the appropriate section heading.
 : ''If'' there are other tutorials you may add yours anywhere in the section (top, middle, bottom) where it logically fits in.
 
@@ -61,7 +61,7 @@ For additional assistance with editing, saving, or wiki-appropriate markup see t
 
 : ''Note'': It is preferable to have a blank line above and below your entry, separating it from any other entries or markup.
 
- 1. ''Action'': Add a ''brief'' description of what the tutorial covers on the line below the link.
+: ''Action 2'': Add a ''brief'' description of what the tutorial covers on the line below the link.
 
  ''Markup'': Place two blank spaces followed by a period (and an optional space) before your description text.
  ```
@@ -99,7 +99,7 @@ Return to [[#existing|Adding An Existing Tutorial]] to complete the process.
 <br/>
 <span id="creating"></span>
 == Creating A New Tutorial ==
- 1. ''Action'': Create an address for your tutorial.
+: ''Action 1'': Create an address for your tutorial.
 
  ''How'': Type the following into the address bar and replace <code>PageName</code> with the name of your page.  Press Enter to begin creating the page.
 
@@ -120,7 +120,7 @@ http://wiki.libsdl.org/moin.cgi/PageName
  ||''Note'': You will not be able to correct it yourself.||
  ''Note'': If you type in an address and land on an existing page you will need to select a new address.
 
- 1.#2 ''Action'': Create a blank page to fill with your tutorial.
+: ''Action 2'': Create a blank page to fill with your tutorial.
 
  ''How'': If you have chosen a unique address in step 1 [[#creating|above]] then you will arrive at a page that has the following at the top followed by a table with 2 columns.
   ||'''This page does not exist yet. You can create a new empty page, or use one of the page templates.'''<br/><br/><<Color2(blue,Create new empty page)>>||
@@ -130,7 +130,7 @@ http://wiki.libsdl.org/moin.cgi/PageName
 : If you prefer to use the GUI editor click <<Color2(blue,GUI/Text Mode)>> in the left column to switch to the GUI editor.
 
 
- 1.#3 ''Action'': Create your tutorial!<br/>Your tutorial page may have any formatting you feel suits the contents best. It is preferred that the general appearance remain consistent (or at least compatible) with the rest of the wiki as much as possible.
+: ''Action 3'': Create your tutorial!<br/>Your tutorial page may have any formatting you feel suits the contents best. It is preferred that the general appearance remain consistent (or at least compatible) with the rest of the wiki as much as possible.
 
  ''Note'': For information on markup see [[SGWikiBasics]]
 
