--- a/SDLEnumTemplate.mediawiki
+++ b/SDLEnumTemplate.mediawiki
@@ -3,8 +3,15 @@
 <!-- acl All:read -->
 '''DRAFT'''
 
+<!-- #You will need to remove the line #acl All:read above in order to be able to save the new page.  Do not remove any other content above this comment.  You may delete this comment before you save. -->
+
+<!-- #*^*^*^*^*See http://wiki.libsdl.org/moin.cgi/SGEnumerations for details on editing this page*^*^*^*^* -->
+
 = SDL_Enumeration =
-An enumeration of ''replace with description of the enum''.
+An enumeration of ******.
+<!-- #Replace SDL_Enumeration with the name of the enum and ****** with a description of the enum, then delete this comment. -->
+
+
 
 
 == Values ==
@@ -19,19 +26,30 @@ An enumeration of ''replace with description of the enum''.
 |description
 |}
 
+<!-- #Fill in the above table per the Style Guide, then delete this comment. -->
+
 == Code Examples ==
 ```c++
 You can add your code example here
 ```
 
+<!-- #Leave this section as-is unless you have a code example to put in.  In that case, replace You can add your code example here with your code example following the Style Guide instructions.  Leave the rest of the markup alone and delete this comment. -->
+
+
 == Remarks ==
 ''You can add useful comments here''
 
+<!-- #Leave this section as-is unless you have a remark to put in.  In that case, replace ''You can add useful comments here'' with your remark(s) following the Style Guide instructions.  Leave the rest of the markup alone and delete this comment. -->
+
+
 == Related Structures ==
-:[[SDL_StructureRemoveSectionIfEmpty]]
+:[[SDL_Structure]] 
+<!-- #Remove this section if empty -->
 
 == Related Functions ==
-:[[SDL_FunctionRemoveSectionIfEmpty]]
+:[[SDL_Function]]
+<!-- #Remove this section if empty -->
 
 ----
 [[CategoryEnum]], [[CategoryHeader]]
+<!-- #See the Style Guide for instructions on editing the footer. -->
