--- a/SDLStructTemplate.mediawiki
+++ b/SDLStructTemplate.mediawiki
@@ -3,8 +3,16 @@
 <!-- acl All:read -->
 '''DRAFT'''
 
+<!-- #You will need to remove the line #acl All:read above in order to be able to save the new page.  Do not remove any other content above this comment.  You may delete this comment before you save. -->
+
+<!-- #*^*^*^*^*See http://wiki.libsdl.org/moin.cgi/SGStructures for details on editing this page*^*^*^*^* -->
+
+
 = SDL_Structure =
-A structure that contains ''replace with brief description of the structure''.
+A structure that contains ******
+<!-- #Replace SDL_Structure with the name of the struct and ****** with a brief description of the structure, then delete this comment. -->
+
+
 
 
 == Data Fields ==
@@ -22,22 +30,35 @@ A structure that contains ''replace with brief description of the structure''.
 |description
 |}
 
+<!-- #Fill in the above table per the Style Guide, then delete this comment. -->
+
+
 == Code Examples ==
 ```c++
 You can add your code example here
 ```
 
+<!-- #Leave this section as-is unless you have a code example to put in.  In that case, replace You can add your code example here with your code example following the Style Guide instructions.  Leave the rest of the markup alone and delete this comment. -->
+
+
 == Remarks ==
 ''You can add useful comments here''
 
+<!-- #Leave this section as-is unless you have a remark to put in.  In that case, replace ''You can add useful comments here'' with your remark(s) following the Style Guide instructions.  Leave the rest of the markup alone and delete this comment. -->
+
+
 == Related Enumerations ==
-:[[SDL_EnumerationRemoveSectionIfEmpty]]
+:[[SDL_Enumeration]]
+<!-- #Remove this section if empty -->
 
 == Related Structures ==
-:[[SDL_StructureRemoveSectionIfEmpty]]
+:[[SDL_Structure]]
+<!-- #Remove this section if empty -->
 
 == Related Functions ==
-:[[SDL_FunctionRemoveSectionIfEmpty]]
+:[[SDL_Function]]
+<!-- #Remove this section if empty -->
 
 ----
 [[CategoryStruct]], [[CategoryHeader]]
+<!-- #See the Style Guide for instructions on editing the footer. -->
