--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -46,7 +46,7 @@ To help you with this we have created a series of resources:
  ||[[SGFunctions|Function Pages]]||Editing Function pages<br/>Editing Macro pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
  ||[[SGStructures|Structure Pages]]||Editing Structure pages<br/>Editing Union pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
  ||[[SGEnumerations|Enumeration Pages]]||Editing Enumeration pages<br/>Editing Hint pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
-<!-- # ||[[SGNewPages|New Pages]]||Creating new pages in the wiki|| -->
+ ||[[SGNewPages|New Pages]]||Creating new pages in the wiki<br/>~-This is supplemental to the other Style Guides-~||
 
 : If you find something that is not addressed or is unclear in a style guide please post your questions to the Documentation mailing list, on a Forum, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
