--- a/SDL_InitSubSystem.mediawiki
+++ b/SDL_InitSubSystem.mediawiki
@@ -25,7 +25,10 @@ Returns 0 on success or a negative error code on failure; call [[SDL_GetError]](
 SDL_Init(SDL_INIT_VIDEO);
 .
 .
-SDL_SetVideoMode(640, 480, 16, SDL_DOUBLEBUF|SDL_FULLSCREEN);
+SDL_Window* window = SDL_CreateWindow("A Window", 
+    SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 640, 480,
+    SDL_WINDOW_FULLSCREEN|SDL_WINDOW_SHOWN);
+SDL_Renderer* renderer = SDL_CreateRenderer(window, -1, 0);
 .
 /* Do Some Video stuff */
 .
