--- a/SDL_CreateWindowFrom.mediawiki
+++ b/SDL_CreateWindowFrom.mediawiki
@@ -13,7 +13,7 @@ SDL_Window* SDL_CreateWindowFrom(const void* data)
 == Function Parameters ==
 {|
 |'''data'''
-|a pointer to driver-dependent window creation data
+|a pointer to driver-dependent window creation data, typically your native window cast to a void*
 |}
 
 == Return Value ==
