--- a/SDL_SetRenderDrawColor.mediawiki
+++ b/SDL_SetRenderDrawColor.mediawiki
@@ -29,7 +29,7 @@ int SDL_SetRenderDrawColor(SDL_Renderer* renderer,
 |the blue value used to draw on the rendering target
 |-
 |'''a'''
-|the alpha value used to draw on the rendering target; usually SDL_ALPHA_OPAQUE (255). Use [[SDL_SetDrawBlendMode]] to specify how the alpha channel is used
+|the alpha value used to draw on the rendering target; usually SDL_ALPHA_OPAQUE (255). Use [[SDL_SetRenderDrawBlendMode]] to specify how the alpha channel is used
 |}
 
 == Return Value ==
