--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -2,12 +2,12 @@
 <!-- pragma disable-camelcase -->
 '''DRAFT'''
 
-= SDL 1.2 to 1.3 Migration Guide =
+= SDL 1.2 to 2.0 Migration Guide =
 
 
 == Introduction ==
 
-This page describes what changed from SDL 1.2 to SDL 1.3, the new features, and upgrade tips.
+This page describes what changed from SDL 1.2 to SDL 2.0, the new features, and upgrade tips.
 
 == Looking for information ==
 
@@ -68,7 +68,7 @@ SDL_PeepEvents(&event, 1, SDL_GETEVENT, SDL_EVENTMASK(SDL_MOUSEBUTTONDOWN))
 becomes:
 
 ```
-# 1.3
+# 2.0
 SDL_PeepEvents(&event, 1, SDL_GETEVENT, SDL_MOUSEBUTTONDOWN, SDL_MOUSEBUTTONDOWN)
 ```
 
@@ -86,18 +86,18 @@ Audio is very similar to 1.2.  The driver detection/priority changed, you may ne
 
 == CD-ROM ==
 
-CD-ROM support was dropped in 1.3.  There is no replacement.
+CD-ROM support was dropped in 2.0.  There is no replacement.
 
 
 == Extensions compatibility ==
 
-The official extensions SDL_image, SDL_ttf, SDL_mixer and SDL_net can be compiled with both 1.2 and 1.3.  You may need to download them from the [http://hg.libsdl.org/ mercurial repositories] for the latest fixes.
+The official extensions SDL_image, SDL_ttf, SDL_mixer and SDL_net have a version dedicated to SDL2.0 : SDL2_image, SDL2_ttf, SDL2_mixer and SDL2_net. You may need to download them from the [http://hg.libsdl.org/ mercurial repositories] for the latest fixes.
 
-[http://www.ferzkopp.net/joomla/content/view/19/14/ SDL_gfx] can also be compiled with 1.3 starting since 2.0.21 (May 2010).
+[http://www.ferzkopp.net/joomla/content/view/19/14/ SDL_gfx] can also be compiled with 2.0 starting since 2.0.21 (May 2010).
 
 Changes related to software surfaces manipulation are usually trivial, so more extensions should be rebuildable.
 
-However, this multi-support can lead to delicate situations in the context of shared libraries (when using GNU/Linux distros package dependencies, or when using ms windows .dll's).  For example, if your new 1.3 game links against ```libSDL_image-1.2.so.0```, it will not be able to know whether SDL_image is itself linked against SDL 1.2 or SDL 1.3, especially if SDL_image is provided by the distro and not compiled by you.
+However, this multi-support can lead to delicate situations in the context of shared libraries (when using GNU/Linux distros package dependencies, or when using ms windows .dll's).  For example, if your new 2.0 game links against ```libSDL_gfx.2.0.23.so.0```, it will not be able to know whether SDL_gfx is itself linked against SDL 1.2 or SDL 2.0, especially if SDL_gfx is provided by the distro and not compiled by you.
 
 == Strategies ==
 
@@ -105,8 +105,8 @@ Here we discuss migration strategies for your code base.
 
 Basic technique: here's how to detect the current SDL version:
 ```
-#if SDL_VERSION_ATLEAST(1,3,0)
-/* SDL 1.3 code */
+#if SDL_VERSION_ATLEAST(2,0,0)
+/* SDL 2.0 code */
 #else
 /* SDL 1.2 code */
 #endif
@@ -114,11 +114,11 @@ Basic technique: here's how to detect the current SDL version:
 
 === Rewrite ===
 
-The most obvious one: drop SDL 1.2 and rewrite everything for 1.3.
+The most obvious one: drop SDL 1.2 and rewrite everything for 2.0.
 
 === Backward-compatibility ===
 
-There are good chances that your current 1.2 code will directly compile under 1.3.  Check ```include/SDL_compat.h``` and  {{{SDL/src/SDL_compat.c}}} to get an idea.
+There are good chances that your current 1.2 code will directly compile under 2.0.  Check ```include/SDL_compat.h``` and  {{{SDL/src/SDL_compat.c}}} to get an idea.
 
 Your code will probably run slower though; in particular there will be no hardware surfaces.
 
@@ -128,6 +128,6 @@ Compatibility is not 100% correct though; for instance ```SDL_SetPalette``` flag
 
 You may want to support both libraries, for instance because SDL 1.2 is currently better supported on your platform, or better packaged in GNU/Linux distros.
 
-The !AlienBlaster code, in the Android port repository, uses a few additional functions on top of SDL, that will use either SDL 1.2 or 1.3 seemlessly, and minimise the amount of #ifdef.  It's not completely fool-proof though, for instance blits between hardware surfaces will result in a no-op under 1.3.  Check the C++ code at:
+The !AlienBlaster code, in the Android port repository, uses a few additional functions on top of SDL, that will use either SDL 1.2 or 2.0 seemlessly, and minimise the amount of #ifdef.  It's not completely fool-proof though, for instance blits between hardware surfaces will result in a no-op under 2.0.  Check the C++ code at:
 
 [http://github.com/pelya/commandergenius/blob/sdl_android/project/jni/application/alienblaster/SdlForwardCompat.h]
