--- a/FAQGeneral.mediawiki
+++ b/FAQGeneral.mediawiki
@@ -7,7 +7,7 @@
 Very simply, Simple DirectMedia Layer, or SDL for short, is a library that allows you low level access to a video framebuffer, audio output, mouse, keyboard, and joysticks across a wide variety of operating systems. 
 
 == What platforms are supported? ==
-The current version supports Windows XP, Vista, and 7, MacOS X 10.4+, Linux 2.6+, iOS 3.1.3+, and Android 1.6+.  SDL 1.3 includes code for other operating systems but they are not officially supported.  See [http://hg.libsdl.org/SDL/file/default/README.Platforms] for the most recent list.
+The current version supports Windows XP, Vista, and 7, MacOS X 10.4+, Linux 2.6+, iOS 3.1.3+, and Android 1.6+.  SDL 2.0 includes code for other operating systems but they are not officially supported.  See [http://hg.libsdl.org/SDL/file/default/README.Platforms] for the most recent list.
 
 == What is the latest version? ==
 The latest stable version is 1.2 You can always get the very latest bleeding edge Subversion snapshot, which may be broken at any given time, from the Subversion page.
@@ -44,4 +44,4 @@ If you have a project that you feel is ready for the general public, you can add
  1. Fill in the form and click Submit at the bottom
 
 == What's up with SDL 2.0? Can I help? ==
-SDL 1.3 is in development and when it matures it will become SDL 2.0. You can download a PRERELEASE version of the code from the SDL Mercurial page (http://www.libsdl.org/hg.php) and provide feedback on the [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org Development mailing list].<br/>If you want to contribute to the wiki check out the [http://wiki.libsdl.org/moin.cgi/Contributing Contributing] page.
+SDL 2.0 is in development. You can download a PRERELEASE version of the code from the SDL Mercurial page (http://www.libsdl.org/hg.php) and provide feedback on the [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org Development mailing list].<br/>If you want to contribute to the wiki check out the [http://wiki.libsdl.org/moin.cgi/Contributing Contributing] page.
