--- a/SDL_SetRenderTarget.mediawiki
+++ b/SDL_SetRenderTarget.mediawiki
@@ -37,3 +37,5 @@ Before using this function, you should check the SDL_RENDERER_TARGETTEXTURE bit 
 
 ----
 [[CategoryAPI]], [[CategoryRender]]
+----
+CategoryRender
