--- a/Introduction.mediawiki
+++ b/Introduction.mediawiki
@@ -2,20 +2,20 @@
 <!-- pragma camelcase off -->
 <!-- acl All:read -->
 
-= Introduction to SDL 1.3 =
+= Introduction to SDL 2.0 =
 
 
 == Introduction to SDL ==
 === What is SDL? ===
 The Simple DirectMedia Layer library (SDL) is a general API that provides low level access to audio, keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D framebuffer across multiple platforms.
 
-The current version (1.3) supports Windows XP, Windows Vista, Windows 7, Mac OS X, Linux, iOS, and Android. The code contains support for other operating systems but those are not officially supported.
+The current version supports Windows XP, Windows Vista, Windows 7, Mac OS X, Linux, iOS, and Android. The code contains support for other operating systems but those are not officially supported.
 : For the latest information on what is supported see http://hg.libsdl.org/SDL/file/default/README.Platforms.
 
 SDL is written in C, but works with C++ natively, and has bindings to several other languages, including Ada, C#, Eiffel, Erlang, Euphoria, Guile, Haskell, Java, Lisp, Lua, ML, Objective C, Pascal, Perl, PHP, Pike, Pliant, Python, Ruby, and Smalltalk.
 : For the latest list of languages see http://www.libsdl.org/languages.php
 
-SDL 1.3 is under the [http://www.zlib.net/zlib_license.html zlib] license, which allows free use for commercial and non-commercial purposes.  
+SDL 2.0 is under the [http://www.zlib.net/zlib_license.html zlib] license, which allows free use for commercial and non-commercial purposes.  
 
 
 === What can SDL do? ===
@@ -103,7 +103,7 @@ SDL 1.3 is under the [http://www.zlib.net/zlib_license.html zlib] license, which
 * Uses X11 for video display, taking advantage of OpenGL for hardware acceleration
 * Uses the ALSA, OSS and !PulseAudio APIs for sound
 
-== Special features in SDL 1.3 ==
+== Special features in SDL 2.0 ==
 * Full 3D hardware acceleration
 * Support for OpenGL 3.0+
 * Support for multiple windows
@@ -111,5 +111,5 @@ SDL 1.3 is under the [http://www.zlib.net/zlib_license.html zlib] license, which
 * Support for multiple mice, tablets, etc.
 * Force Feedback available on Windows, Mac OS X and Linux
 
-=== Transitioning from SDL 1.2 to 1.3 ===
+=== Transitioning from SDL 1.2 to 2.0 ===
 * [http://wiki.libsdl.org/moin.cgi/MigrationGuide Migration Guide]
