--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -41,7 +41,51 @@ Returns the window that was created or NULL on failure; call [[SDL_GetError]]() 
 
 == Code Examples ==
 ```c++
-You can add your code example here
+
+// Example program:
+// Using SDL2 to create an application window
+
+#include <SDL2/SDL.h>
+#include <iostream>
+
+using namespace std;
+
+int main(int argc, char* argv[]){
+
+  SDL_Init(SDL_INIT_VIDEO);   // Initialize SDL2
+  
+  SDL_Window *pWindow;        // Declare a pointer to an SDL_Window
+  
+  // Create an application window with the following settings:
+  pWindow = SDL_CreateWindow( 
+    "An SDL2 window",         //    const char* title
+    SDL_WINDOWPOS_UNDEFINED,  //    int x: initial x position
+    SDL_WINDOWPOS_UNDEFINED,  //    int y: initial y position
+    640,                      //    int w: width, in pixels
+    480,                      //    int h: height, in pixels
+    0                         //    Uint32 flags: window options, see below
+  );
+  
+  // Check that the window was successfully made
+  if(pWindow==NULL){   
+    // In the event that the window could not be made...
+    cout << "Could not create window: " << SDL_GetError() << '\n';
+    return 1;
+  }
+  
+  // The window is open: enter program loop (see SDL_PollEvent)
+
+  SDL_Delay(3000);  // Pause execution for 3000 milliseconds, for example
+  
+  // Close and destroy the window
+  SDL_DestroyWindow(pWindow); 
+   
+  // Uninitialize SDL2 and exit the program
+  SDL_Quit(); 
+  return 0;   
+ 
+}
+
 ```
 
 == Remarks ==
