--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -63,7 +63,7 @@ int main(int argc, char* argv[]){
     SDL_WINDOWPOS_UNDEFINED,  //    int y: initial y position
     640,                      //    int w: width, in pixels
     480,                      //    int h: height, in pixels
-    0                         //    Uint32 flags: window options, see below
+    SDL_WINDOW_SHOWN          //    Uint32 flags: window options, see below
   );
   
   // Check that the window was successfully made
